--- a/profiles0004.html
+++ b/profiles0004.html
@@ -141,9 +141,11 @@ permalink: /courses/bioinformatics-profiles4/
                             <table class="table table-responsive table-striped">
                               <thead>
                                 <tr>
-                                  <th>Course Code</th>
+                                  <th>Course code</th>
                                   <th>Title</th>
-                                  <th>Level </th>
+                                  <th>Pathogen</th>
+                                  <th>Persona </th>
+                                  <th>Level</th>
                                   <th>Link</th>
                                 </tr>
                               </thead>
@@ -151,24 +153,32 @@ permalink: /courses/bioinformatics-profiles4/
                                 <tr>
                                   <td>001</td>
                                   <td>Unix/linux, command line, shell scripting </td>
+                                  <td>----</td>
+                                  <td>----</td>
                                   <td>Beginner</td>
                                   <td> <a href="#" target="_blank">Link</a></td>
                                 </tr>
                                 <tr>
                                   <td>002</td>
                                   <td>Data analytics</td>
+                                  <td>----</td>
+                                  <td>----</td>
                                   <td>Beginner</td>
                                   <td> <a href="#" target="_blank">Link</a></td>
                                 </tr>
                                 <tr>
                                   <td>003</td>
                                   <td>Phylogenetics</td>
+                                  <td>----</td>
+                                  <td>----</td>
                                   <td>Beginner</td>
                                   <td> <a href="#" target="_blank">Link</a></td>
                                 </tr>
                                 <tr>
                                   <td>004</td>
                                   <td>Informatics skills </td>
+                                  <td>----</td>
+                                  <td>----</td>
                                   <td>Beginner</td>
                                   <td> <a href="#" target="_blank">Link</a></td>
                                 </tr>
@@ -181,24 +191,32 @@ permalink: /courses/bioinformatics-profiles4/
                                 <tr>
                                   <td>006</td>
                                   <td>Programming in Python</td>
+                                  <td>----</td>
+                                  <td>----</td>
                                   <td>Beginner</td>
                                   <td> <a href="#" target="_blank">Link</a></td>
                                 </tr>
                                 <tr>
                                   <td>007</td>
                                   <td>R programming</td>
+                                  <td>----</td>
+                                  <td>----</td>
                                   <td>Beginner</td>
                                   <td> <a href="#" target="_blank">Link</a></td> 
                                 </tr>
                                 <tr>
                                   <td>008</td>
                                   <td>Github and version control</td>
+                                  <td>----</td>
+                                  <td>----</td>
                                   <td>Beginner</td>
                                   <td> <a href="#" target="_blank">Link</a></td> 
                                 </tr>
                                 <tr>
                                   <td>009</td>
                                   <td>Ontologies, standards, data curation and submission</td>
+                                  <td>----</td>
+                                  <td>----</td>
                                   <td>Beginner</td>
                                   <td> <a href="#" target="_blank">Link</a></td> 
                                 </tr>
