--- a/profiles0004.html
+++ b/profiles0004.html
@@ -4,96 +4,263 @@ title: Pathogen Surveillance Training Curricula
 permalink: /courses/bioinformatics-profiles0004/
 ---
 
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+<script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
+<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
 
+<div class="table-responsive">
+<table id="example" class="" class="display">
+  <thead>
+      <tr>
+          <th>Code</th>
+          <th class="column1">Title</th>
+          <th>Pathogen</th>
+          <th>Persona </th>
+          <th>Level</th>
+          <th>Link</th>
+      </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>001</td>
+      <td class="column1" >Unix/linux, command line, shell scripting </td>
+      <td>Foundational</td>
+      <td>Bioinformatics Scientist</td>
+  
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>002</td>
+      <td>Data analytics</td>
+      <td>Foundational</td>
+      <td>Bioinformatics Scientist</td>
+    
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>003</td>
+      <td>Phylogenetics</td>
+      <td>Foundational</td>
+      <td>Bioinformatics Scientist</td>
+  
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>004</td>
+      <td>Informatics skills </td>
+      <td>Foundational</td>
+      <td>Bioinformatics Scientist</td>
 
-<h3>Persona Selector</h3>
-<div>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>005</td>
+      <td>Workflows and containerization</td>
+      <td>Foundational</td>
+      <td>Bioinformatics Scientist</td>
 
-    <label for="category">Pathogen type:</label>
-<select id="category">
-    <option value="foundational">Foundational Skills</option>
-    <option value="viral">Viral Pathogens Skills</option>
-    <option value="bacteria">Bacterial Pathogens Skills</option>
-    <option value="all">All Skills</option>
-</select>
-<label for="degree">Persona:</label>
-<select id="persona">
-    <option value="bio_informatics">Bioinformatics Scientist</option>
-    <option value="wet_lab">Wetlab Scientist</option>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>006</td>
+      <td>Programming in Python</td>
+      <td>Foundational</td>
+      <td>Bioinformatics Scientist</td>
+  
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>007</td>
+      <td>R programming</td>
+      <td>Foundational</td>
+      <td>Bioinformatics Scientist</td>
 
-</select>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td> 
+    </tr>
+    <tr>
+      <td>008</td>
+      <td>Github and version control</td>
+      <td>Foundational</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td> 
+    </tr>
+    <tr>
+      <td>009</td>
+      <td>Ontologies, standards, data curation and submission</td>
+      <td>Foundational</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td> 
+    </tr>
+    <!-- viral -->
+    <tr>
+      <td>001</td>
+      <td>Introduction to NGS data processing</td>
+      <td>Viral</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>002</td>
+      <td>NGS, Illumina, ONT workflows</td>
+      <td>Viral</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>003</td>
+      <td>Nextclade and Pangolin</td>
+      <td>Viral</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>004</td>
+      <td>Galaxy workflow (or other slected workflow(s))</td>
+      <td>Viral</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>005</td>
+      <td>Phylogenetics</td>
+      <td>Viral</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>006</td>
+      <td>Advanced bioinformatics analysis for viruses</td>
+      <td>Viral</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>007</td>
+      <td>Data curation and submission</td>
+      <td>Viral</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+
+    <tr>
+      <td>008</td>
+      <td>Dissemination of genomic surveillance findings to policy makers and the public</td>
+      <td>Viral</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+
+    <!-- bactterial -->
+    <tr>
+      <td>001</td>
+      <td>Introduction to bacterial NGS data processing</td>
+      <td>Bacterial</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>002</td>
+      <td>Bacterial pathogen data analysis</td>
+      <td>Bacterial</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>003</td>
+      <td>PATRIC (the PathoSystems Resource Integration Center, a Bioinformatics Resource Center Platform)</td>
+      <td>Bacterial</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>004</td>
+      <td>Phylogenetics</td>
+      <td>Bacterial</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>005</td>
+      <td>Metagenomics for pathogen surveillance</td>
+      <td>Bacterial</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+      <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>006</td>
+      <td>Data curation and submission</td>
+      <td>Bacterial</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+     <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+    <tr>
+      <td>007</td>
+      <td>Dissemination of genomic surveillance findings to policy makers and the public</td>
+      <td>Bacterial</td>
+      <td>Bioinformatics Scientist</td>
+      <td>Beginner</td>
+     <td> <a href="#" target="_blank">Link</a></td>
+    </tr>
+  </tbody>
+  <tfoot>
+      <tr>
+        <th>Code</th>
+        <th>Title</th>
+        <th>Pathogen</th>
+        <th>Persona </th>
+        <th>Level</th>
+        <th>Link</th>
+      </tr>
+  </tfoot>
+</table>
 
 
 </div>
-<div id="course-list">
-    <!-- Course records will be displayed here -->
-</div>
-
 
 <script>
 
-
-// Sample course data (you can replace this with your actual data)
-const courses = {
-    bio_informatics: {
-        foundational: ["Unix/linux, command line, shell scripting ", "Data analytics", "Programming in Python"],
-        viral: ["Introduction to NGS data processing", "NGS, Illumina, ONT workflows", "Nextclade and Pangolin"],
-        bacteria: ["Introduction to bacterial NGS data processing", "Bacterial pathogen data analysis"],
-        all: ["ALL", "AlL"]
-      
-    },
-    wet_lab: {
-        foundational: ["Health and safety protocols", "Lab practical: DNA/RNA sequencing"],
-        viral: ["Sample processing and library preparation (Theory and wet lab practical)", "Lab practical: RNA/DNA sequencing"],
-        bacteria: ["Health and safety protocols", "Sample processing and library preparation (Theory and wet lab practical)"],
-        all: ["ALL", "AlL", "AlL", "AlL"],
-    }
-};
-
-// Function to update the course list based on user's selections
-function updateCourseList() {
-    const degreeSelect = document.getElementById("persona");
-    const categorySelect = document.getElementById("category");
-    const courseList = document.getElementById("course-list");
-
-    const selectedDegree = degreeSelect.value;
-    const selectedCategory = categorySelect.value;
-
-    // Clear the previous course list
-    courseList.innerHTML = "";
-
-    // Get courses based on user's selections
-    const selectedCourses = courses[selectedDegree][selectedCategory];
-
-    // Display selected courses
-    selectedCourses.forEach(course => {
-        const courseItem = document.createElement("p");
-        courseItem.textContent = course;
-        courseList.appendChild(courseItem);
-    });
-}
-
-// Attach event listeners to the selects
-document.getElementById("persona").addEventListener("change", updateCourseList);
-document.getElementById("category").addEventListener("change", updateCourseList);
-
-// Initial course list update
-updateCourseList();
-
+	
+$(document).ready(function() {
+    var table = $('#example').DataTable();
+ 
+    $("#example tfoot th").each( function ( i ) {
+        var select = $('<select><option value=""></option></select>')
+            .appendTo( $(this).empty() )
+            .on( 'change', function () {
+                table.column( i )
+                    .search( $(this).val() )
+                    .draw();
+            } );
+ 
+        table.column( i ).data().unique().sort().each( function ( d, j ) {
+            select.append( '<option value="'+d+'">'+d+'</option>' )
+        } );
+    } );
+} );
 
 </script>
-
-
-
-
-
-
-
-<script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<script type="text/javascript" language="javascript"
-    src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/select/1.2.1/js/dataTables.select.min.js" type="text/javascript"></script>
