--- a/test-data-tables.html
+++ b/test-data-tables.html
@@ -9,27 +9,32 @@ permalink: /test/
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
 
-<div class="table-responsive">
-<table id="example" class="" class="display">
+
+<input type="checkbox" onclick="toggleColumn(0);" checked> Code
+<input type="checkbox" onclick="toggleColumn(1);" checked> Title
+<input type="checkbox" onclick="toggleColumn(2);" checked> Pathogen
+<input type="checkbox" onclick="toggleColumn(3);" checked> Persona
+
+<div class="table-responsive" >
+<table id="example" class="" style>
   <thead>
       <tr>
           <th>Code</th>
-          <th class="column1">Title</th>
+          <th class="column_title">Title</th>
           <th>Pathogen</th>
           <th>Persona </th>
           <th>Level</th>
-          <th>Link</th>
       </tr>
   </thead>
   <tbody>
     <tr>
       <td>001</td>
-      <td class="column1" >Unix/linux, command line, shell scripting </td>
+      <td class="column_title" >Unix/linux, command line, shell scripting </td>
       <td>Foundational</td>
       <td>Bioinformatics Scientist</td>
   
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>002</td>
@@ -38,7 +43,7 @@ permalink: /test/
       <td>Bioinformatics Scientist</td>
     
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>003</td>
@@ -47,7 +52,7 @@ permalink: /test/
       <td>Bioinformatics Scientist</td>
   
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+    
     </tr>
     <tr>
       <td>004</td>
@@ -56,7 +61,7 @@ permalink: /test/
       <td>Bioinformatics Scientist</td>
 
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>005</td>
@@ -65,7 +70,7 @@ permalink: /test/
       <td>Bioinformatics Scientist</td>
 
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+  
     </tr>
     <tr>
       <td>006</td>
@@ -74,7 +79,7 @@ permalink: /test/
       <td>Bioinformatics Scientist</td>
   
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+  
     </tr>
     <tr>
       <td>007</td>
@@ -83,7 +88,7 @@ permalink: /test/
       <td>Bioinformatics Scientist</td>
 
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td> 
+  
     </tr>
     <tr>
       <td>008</td>
@@ -91,7 +96,7 @@ permalink: /test/
       <td>Foundational</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td> 
+ 
     </tr>
     <tr>
       <td>009</td>
@@ -99,7 +104,7 @@ permalink: /test/
       <td>Foundational</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td> 
+ 
     </tr>
     <!-- viral -->
     <tr>
@@ -108,7 +113,7 @@ permalink: /test/
       <td>Viral</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+  
     </tr>
     <tr>
       <td>002</td>
@@ -116,7 +121,7 @@ permalink: /test/
       <td>Viral</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>003</td>
@@ -124,7 +129,7 @@ permalink: /test/
       <td>Viral</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+  
     </tr>
     <tr>
       <td>004</td>
@@ -132,7 +137,7 @@ permalink: /test/
       <td>Viral</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+ 
     </tr>
     <tr>
       <td>005</td>
@@ -140,7 +145,7 @@ permalink: /test/
       <td>Viral</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>006</td>
@@ -148,7 +153,7 @@ permalink: /test/
       <td>Viral</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+  
     </tr>
     <tr>
       <td>007</td>
@@ -156,16 +161,18 @@ permalink: /test/
       <td>Viral</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+   
     </tr>
 
     <tr>
       <td>008</td>
-      <td>Dissemination of genomic surveillance findings to policy makers and the public</td>
+      <td>Dissemination of genomic 
+        <!-- surveillance findings to policy makers and the public -->
+      </td>
       <td>Viral</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+ 
     </tr>
 
     <!-- bactterial -->
@@ -175,7 +182,7 @@ permalink: /test/
       <td>Bacterial</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>002</td>
@@ -183,15 +190,17 @@ permalink: /test/
       <td>Bacterial</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>003</td>
-      <td>PATRIC (the PathoSystems Resource Integration Center, a Bioinformatics Resource Center Platform)</td>
+      <td>PATRIC the PathoSystems Resource
+         <!-- Integration Center, a Bioinformatics Resource Center Platform) -->
+        </td>
       <td>Bacterial</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>004</td>
@@ -199,7 +208,7 @@ permalink: /test/
       <td>Bacterial</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>005</td>
@@ -207,7 +216,7 @@ permalink: /test/
       <td>Bacterial</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-      <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>006</td>
@@ -215,35 +224,34 @@ permalink: /test/
       <td>Bacterial</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-     <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
     <tr>
       <td>007</td>
-      <td>Dissemination of genomic surveillance findings to policy makers and the public</td>
+      <td>Dissemination of genomic
+         <!-- surveillance findings to policy makers and the public -->
+        </td>
       <td>Bacterial</td>
       <td>Bioinformatics Scientist</td>
       <td>Beginner</td>
-     <td> <a href="#" target="_blank">Link</a></td>
+
     </tr>
   </tbody>
   <tfoot>
       <tr>
         <th>Code</th>
-        <th>Title</th>
+        <th class="column_title">Title</th>
         <th>Pathogen</th>
         <th>Persona </th>
         <th>Level</th>
-        <th>Link</th>
+
       </tr>
   </tfoot>
 </table>
 
 
 </div>
-
 <script>
-
-	
 $(document).ready(function() {
     var table = $('#example').DataTable();
  
@@ -254,12 +262,23 @@ $(document).ready(function() {
                 table.column( i )
                     .search( $(this).val() )
                     .draw();
+
+                    $('#container').css( 'display', 'block' );
+                    table.columns.adjust().draw();
             } );
  
         table.column( i ).data().unique().sort().each( function ( d, j ) {
             select.append( '<option value="'+d+'">'+d+'</option>' )
         } );
-    } );
+    } );  
 } );
+
+
+function toggleColumn(index) {
+    var table = $('#example').DataTable();
+    var column = table.column(index);
+    column.visible(!column.visible());
+}
+
 
 </script>
