updated look and feel of data table

--- a/gallery.html
+++ b/gallery.html
@@ -4,62 +4,65 @@ title: Gallery
 permalink: /gallery/
 ---
 
+
+
 <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
 <section class="">
 	<div class="row gallery">
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a href="https://picsum.photos/940/650?random=1">
-				<figure><img class="img-fluid img-thumbnail" src="https://picsum.photos/940/650?random=1" alt="Random Image"></figure>
+			<a href="{{ site.baseurl }}img/gallery2023/IMG_20230913_133530.jpg">
+				<figure><img class="img-fluid img-thumbnail" src="{{ site.baseurl }}img/gallery2023/IMG_20230913_133530.jpg" alt="Random Image"></figure>
 			</a>
 		</div>
 
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a href="https://picsum.photos/940/650?random=2">
-				<figure><img class="img-fluid img-thumbnail" src="https://picsum.photos/940/650?random=2" alt="Random Image"></figure>
+			<a href="{{ site.baseurl }}img/gallery2023/IMG_20230913_131940.jpg">
+				<figure><img class="img-fluid img-thumbnail" src="{{ site.baseurl }}img/gallery2023/IMG_20230913_131940.jpg" alt="Random Image"></figure>
 			</a>
 		</div>
 
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a href="https://picsum.photos/940/650?random=3">
-				<figure><img class="img-fluid img-thumbnail" src="https://picsum.photos/940/650?random=3" alt="Random Image"></figure>
+			<a href="{{ site.baseurl }}img/gallery2023/IMG_20230913_131908.jpg">
+				<figure><img class="img-fluid img-thumbnail" src="{{ site.baseurl }}img/gallery2023/IMG_20230913_131908.jpg" alt="Random Image"></figure>
 			</a>
 		</div>
 
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a href="https://picsum.photos/940/650?random=4">
-				<figure><img class="img-fluid img-thumbnail" src="https://picsum.photos/940/650?random=4" alt="Random Image"></figure>
+			<a href="{{ site.baseurl }}img/gallery2023/IMG_20230913_131950.jpg">
+				<figure><img class="img-fluid img-thumbnail" src="{{ site.baseurl }}img/gallery2023/IMG_20230913_131950.jpg" alt="Random Image"></figure>
 			</a>
 		</div>
 
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a href="https://picsum.photos/940/650?random=5">
-				<figure><img class="img-fluid img-thumbnail" src="https://picsum.photos/940/650?random=5" alt="Random Image"></figure>
+			<a href="{{ site.baseurl }}img/gallery2023/IMG_20230913_120557.jpg">
+				<figure><img class="img-fluid img-thumbnail" src="{{ site.baseurl }}img/gallery2023/IMG_20230913_120557.jpg" alt="Random Image"></figure>
 			</a>
 		</div>
 
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a href="https://picsum.photos/940/650?random=6">
-				<figure><img class="img-fluid img-thumbnail" src="https://picsum.photos/940/650?random=6" alt="Random Image"></figure>
-			</a>
+			<!-- <a href="{{ site.baseurl }}img/gallery2023/IMG_20230913_100732.jpg">
+				<figure><img class="img-fluid img-thumbnail" src="{{ site.baseurl }}img/gallery2023/IMG_20230913_100732.jpg" alt="Random Image"></figure>
+			</a> -->
+		</div>
+
+
+		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
+			<!-- <a href="{{ site.baseurl }}img/gallery2023/IMG_20230913_100732.jpg">
+				<figure><img class="img-fluid img-thumbnail" src="{{ site.baseurl }}img/gallery2023/IMG_20230913_100732.jpg" alt="Random Image"></figure>
+			</a> -->
 		</div>
 
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a href="https://picsum.photos/940/650?random=6">
-				<figure><img class="img-fluid img-thumbnail" src="https://picsum.photos/940/650?random=6" alt="Random Image"></figure>
-			</a>
+			<!-- <a href="{{ site.baseurl }}img/gallery2023/IMG_20230913_100732.jpg">
+				<figure><img class="img-fluid img-thumbnail" src="{{ site.baseurl }}img/gallery2023/IMG_20230913_100732.jpg" alt="Random Image"></figure>
+			</a> -->
 		</div>
 
 		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a href="https://picsum.photos/940/650?random=7">
-				<figure><img class="img-fluid img-thumbnail" src="https://picsum.photos/940/650?random=7" alt="Random Image"></figure>
-			</a>
-		</div>
-
-		<div class="col-lg-3 col-md-4 col-xs-6 thumb">
-			<a href="https://picsum.photos/940/650?random=8">
-				<figure><img class="img-fluid img-thumbnail" src="https://picsum.photos/940/650?random=8" alt="Random Image"></figure>
-			</a>
+			<!-- <a href="{{ site.baseurl }}img/gallery2023/IMG_20230913_100732.jpg">
+				<figure><img class="img-fluid img-thumbnail" src="{{ site.baseurl }}img/gallery2023/IMG_20230913_100732.jpg" alt="Random Image"></figure>
+			</a> -->
 		</div>
 	</div>
 </section>
