updated look and feel of data table

--- a/profiles0004.html
+++ b/profiles0004.html
@@ -15,8 +15,8 @@ permalink: /courses/bioinformatics-profiles0004/
 <input type="checkbox" onclick="toggleColumn(2);" checked> Pathogen
 <input type="checkbox" onclick="toggleColumn(3);" checked> Persona
 
-<div class="table-responsive" >
-<table id="example" class="" style>
+<div class="table table-responsive" >
+<table id="example" class="table table-lg">
   <thead>
       <tr>
           <th>Code</th>
@@ -166,8 +166,7 @@ permalink: /courses/bioinformatics-profiles0004/
 
     <tr>
       <td>008</td>
-      <td>Dissemination of genomic 
-        <!-- surveillance findings to policy makers and the public -->
+      <td>Dissemination of genomic surveillance findings to policy makers and the public 
       </td>
       <td>Viral</td>
       <td>Bioinformatics Scientist</td>
