updated ticketing url

--- a/help-desk.html
+++ b/help-desk.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Help-Desk/Ticketing System"
-permalink: /resources/help-desk
+permalink: /resources/help-desk/
 ---
 
 <div class="">
