updated ticketing url picture

--- a/help-desk.html
+++ b/help-desk.html
@@ -21,7 +21,7 @@ permalink: /resources/help-desk/
      <p> Visit   <a href="https://ngs-helpdesk.h3abionet.org/tickets/submit-ticket/ " target="_blank">https://ngs-helpdesk.h3abionet.org/tickets/submit-ticket/ </a> to submit a ticket.</p>
   </div>
 
-  <div class="col-sm-5"><img alt="..." src="{{ site.baseurl }}img/ticket_submit.png" width="90%"/>
+  <div class="col-sm-5"><img alt="..." src="/ngs-academy/img/ticket_submit.png" width="90%"/>
 
   </div>
 
