--- a/help-desk.html
+++ b/help-desk.html
@@ -26,5 +26,8 @@ permalink: /resources/help-desk
   </div>
 
 
+  <iframe width="560" height="315" src="https://www.youtube.com/watch?v=djE_UfwJI1U" frameborder="1" allowfullscreen></iframe>
+
+
 </div>
 </div>
