page layout update

--- a/profiles0004.html
+++ b/profiles0004.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Pathogen Surveillance Training Curricula
-permalink: /courses/bioinformatics-profiles0004/
+permalink: /courses/curricula/
 ---
 
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
