updated column names

--- a/profiles0004.html
+++ b/profiles0004.html
@@ -35,10 +35,10 @@ permalink: /courses/curricula/
 
 
 
-<input type="checkbox" onclick="toggleColumn(0);" checked> Code
+<input type="checkbox" onclick="toggleColumn(0);" checked> Module code
 <input type="checkbox" onclick="toggleColumn(2);" checked> Pathogen
 <input type="checkbox" onclick="toggleColumn(3);" checked> Persona
-<input type="checkbox" onclick="toggleColumn(1);" checked> Title
+<input type="checkbox" onclick="toggleColumn(1);" checked> Module Title
 
 <div class="table table-responsive" class="table-wrapper" >
 <table id="example" class=" table table-sm">
