updated column names

--- a/profiles0004.html
+++ b/profiles0004.html
@@ -50,7 +50,7 @@ permalink: /courses/curricula/
       
           <th>Pathogen</th>
           <th>Persona </th>
-          <th name="title_column">Title</th>
+          <th name="title_column">Module Title</th>
 
       </tr>
   </thead>
