updated title names

--- a/profiles0004.html
+++ b/profiles0004.html
@@ -201,7 +201,7 @@ permalink: /courses/curricula/
     <td>008</td>
     <td>Viral</td>
     <td>Bioinformatics Scientist</td>
-    <td>Dissemination of genomic surveillance findings to policy makers and the public 
+    <td>Dissemination of genomic surveillance findings <br> to policy makers and the public 
     </td>
 
 
@@ -229,7 +229,7 @@ permalink: /courses/curricula/
     <td>003</td>
     <td>Bacterial</td>
     <td>Bioinformatics Scientist</td>
-    <td>PATRIC the PathoSystems Resource Integration Center, (a Bioinformatics Resource Center Platform)
+    <td>PATRIC 
     </td>
 
 
@@ -262,7 +262,7 @@ permalink: /courses/curricula/
     <td>007</td>
     <td>Bacterial</td>
     <td>Bioinformatics Scientist</td>
-    <td>Dissemination of genomic surveillance findings to policy makers and the public 
+    <td>Dissemination of genomic surveillance findings <br> to policy makers and the public 
     </td>
 
 
@@ -350,7 +350,7 @@ permalink: /courses/curricula/
         <td>004</td>
         <td>Fungal</td>
         <td>Bioinformatics Scientist</td>
-        <td>Dissemination of genomic surveillance findings to policy makers and the public</td>
+        <td>Dissemination of genomic surveillance findings <br> to policy makers and the public</td>
   
   
       </tr>
@@ -412,7 +412,7 @@ permalink: /courses/curricula/
       <td>002</td>
       <td>Bacterial</td>
       <td>Wet-Lab Scientist only</td>
-      <td>Sample processing and library preparation (Theory and wet lab practical)</td>
+      <td>Sample processing and library preparation <br> (Theory and wet lab practical)</td>
 
 
     </tr>
@@ -441,7 +441,7 @@ permalink: /courses/curricula/
       <td>002</td>
       <td>Eukaryotic</td>
       <td>Wet-Lab Scientist only</td>
-      <td>Sample processing and library preparation (Theory and wet lab practical)</td>
+      <td>Sample processing and library preparation <br> (Theory and wet lab practical)</td>
 
 
     </tr>
@@ -469,7 +469,7 @@ permalink: /courses/curricula/
           <td>002</td>
           <td>Fungal</td>
           <td>Wet-Lab Scientist only</td>
-          <td>Sample processing and library preparation (Theory and wet lab practical)</td>
+          <td>Sample processing and library preparation <br>(Theory and wet lab practical)</td>
     
     
         </tr>
