--- a/trainer_community.html
+++ b/trainer_community.html
@@ -10,10 +10,12 @@ permalink: /trainer-communities/
   </style>
 
 <div class="row">
-  <div class="col-sm-6 text-center">
+  <div class="col-sm-6 text-left">
     <!-- bootstrap card -->
     <div class="trainer_communities_border">
+      <label class="text-left"> Logo as link</label>
       <h5 class="card-title">Focus Areas</h5>
+    
       <ul>
           <li>
             Data structures
@@ -30,15 +32,15 @@ permalink: /trainer-communities/
           </li>
           <ul>
 <br>
-    <div class="card-footer bg-transparent border-success">How do i join ?</div>
+    <div class="card-footer bg-transparent border-success">How do i join ?: mail@mail.com</div>
 
     </div>
 <!--bootstrap card -->
   </div>
   <div class="col-sm-6">
        <!-- bootstrap card -->
-<div class="trainer_communities_border text-center">
-
+<div class="trainer_communities_border text-left">
+  <label class="text-left"> Logo as link</label>
           <h5 class="card-title">Focus Areas</h5>
           <ul>
               <li>
@@ -58,7 +60,7 @@ permalink: /trainer-communities/
 
                 <br>
 
-        <div class="card-footer bg-transparent border-success">How do i join ? </div>
+        <div class="card-footer bg-transparent border-success">How do i join ?: mail@mail.com</div>
 
  </div>
   <!--bootstrap card -->
