added focus areas in bold

--- a/trainer_community.html
+++ b/trainer_community.html
@@ -14,7 +14,7 @@ permalink: /trainer-communities/
     <!-- bootstrap card -->
     <img alt="..." width="30%" src="/ngs-academy/img/globalhealth.png"/>
     <div class="trainer_communities_border">
-      <h5 class="card-title">Focus Areas</h5>
+      <h5 class="card-title"><b>Focus Areas</b></h5>
     
       <ul>
           <li>
@@ -55,7 +55,7 @@ permalink: /trainer-communities/
        <!-- bootstrap card -->
        <img alt="..." width="60%" src="/ngs-academy/img/phage-logo-jost-2-q9ekptyqmnek1cgj0oimkdlhuprtm9c3l1erny0z5s.png"/>
 <div class="trainer_communities_border text-left">
-          <h5 class="card-title">Focus Areas</h5>
+          <h5 class="card-title"><b>Focus Areas</b></h5>
           <ul>
               <li>
                1. Data structures
