--- a/trainer_community.html
+++ b/trainer_community.html
@@ -10,12 +10,12 @@ permalink: /trainer-communities/
     
 
   .panel-default>.panel-heading {
-    background-color: #8c2133;
-    border-color: #8c2133;
+    background-color: #E8EAEF;
+    border-color:#E8EAEF;
 }  
 
 .accordion_text_title {
-  color: white !important;
+  color: black !important;
 }
 </style>
   <!--New collapsible -->
