updated font colors and background colors of the trainer communities page

--- a/trainer_community.html
+++ b/trainer_community.html
@@ -5,17 +5,17 @@ permalink: /trainer-communities/
 ---
 <style>
 .accordion-toggle:hover {
-  text-decoration: none;
-} 
+      text-decoration: none;
+    } 
+    
 
-
-.panel-default>.panel-heading {
-background-color: #8c2133;
-border-color: #8c2133;
+  .panel-default>.panel-heading {
+    background-color: #E8EAEF;
+    border-color:#E8EAEF;
 }  
 
 .accordion_text_title {
-color: white !important
+  color: black !important;
 }
 </style>
 
